--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npx vite build",
+    "preview": "npx vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -23,6 +23,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "vite": "^5.4.21"
+    "vite": "^7.1.11"
   }
 }
